:lipstick: :construction: : Revamp Hero Section

--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.14",
+    "@types/three": "^0.173.0",
+    "motion": "^12.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
